--- a/myFirstcppProgram.vcxproj
+++ b/myFirstcppProgram.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="myFirstcppProgram.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyotherHeader.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
